--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,104 +1,110 @@
-<div style="width:100%; height:400px; overflow: auto;">
+
+
+<app-chartcomponent></app-chartcomponent>
+<div style="width:100%; height:400px; overflow: auto; display: flex; justify-content: center;">
     <!-- <div style="width:30px; height:30px; overflow:auto;">
         vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
         </div> -->
-    <table class="table table-hover" style="width:1050px; background-color: white; border: 1px soild #E4E7EA;">
-        <thead style="background-color: #E4E7EA;">
-          <tr>
-            <th scope="col">Icon</th>
-            <th scope="col">User</th>
-            <th scope="col">Country</th>
-            <th scope="col">Usage</th>
-            <th scope="col">Payment method</th>
-            <th scope="col">Activity</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><img src="" alt="profile" class="tableimg"></td>
-            <td><div>Username</div>
-              <div>new|Registered</div>
-            </td>
-            <td><img src="" alt="flag" class="tableimg"></td>
-            <td>
-              <div style="display: flex; justify-content: space-between;">
-                <div><b>50%</b></div>
-                <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
-               
-              </div> 
-              <progressbar class="progressbar" [value]="50"></progressbar>
-         
-            </td>
-            <td><img src="" alt="pay img" class="tableimg"></td>
-            <td>
-              <div>Last login</div>
-              <div><b>10 Sec ago</b></div>
-            </td>
-          </tr>
-          <tr>
-            <td><img src="" alt="profile" class="tableimg"></td>
-            <td><div>Username</div>
-              <div>new|Registered</div>
-            </td>
-            <td><img src="" alt="flag" class="tableimg"></td>
-            <td>
-              <div style="display: flex; justify-content: space-between;">
-                <div><b>50%</b></div>
-                <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
-               
-              </div>  
-              <progressbar class="progressbar" [value]="50"></progressbar>
-         
-            </td>
-            <td><img src="" alt="pay img" class="tableimg"></td>
-            <td>
-              <div>Last login</div>
-              <div><b>10 Sec ago</b></div>
-            </td>
-          </tr>
-          <tr>
-            <td><img src="" alt="profile" class="tableimg"></td>
-            <td><div>Username</div>
-              <div>new|Registered</div>
-            </td>
-            <td><img src="" alt="flag" class="tableimg"></td>
-            <td>
-              <div style="display: flex; justify-content: space-between;">
-                <div><b>50%</b></div>
-                <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
-                
-              </div>  
-              <progressbar class="progressbar" [value]="50"></progressbar>
-         
-            </td>
-            <td><img src="" alt="pay img" class="tableimg"></td>
-            <td>
-              <div>Last login</div>
-              <div><b>10 Sec ago</b></div>
-            </td>
-          </tr>
-          <tr>
-            <td><img src="" alt="profile" class="tableimg"></td>
-            <td><div>Username</div>
-              <div>new|Registered</div>
-            </td>
-            <td><img src="" alt="flag" class="tableimg"></td>
-            <td>
-              <div style="display: flex; justify-content: space-between;">
-                <div><b>50%</b></div>
-                <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
-              </div>
-              <progressbar class="progressbar" [value]="50"></progressbar>
-             </td>
-            <td><img src="" alt="pay img" class="tableimg"></td>
-            <td>
-              <div>Last login</div>
-              <div><b>10 Sec ago</b></div>
-            </td>
-          </tr>
-         
-        </tbody>
-      </table>
+        <div>
+          <table class="table table-hover" style="width:1050px; background-color: white; border: 1px soild #E4E7EA;">
+            <thead style="background-color: #E4E7EA;">
+              <tr>
+                <th scope="col">Icon</th>
+                <th scope="col">User</th>
+                <th scope="col">Country</th>
+                <th scope="col">Usage</th>
+                <th scope="col">Payment method</th>
+                <th scope="col">Activity</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><img src="" alt="profile" class="tableimg"></td>
+                <td><div>Username</div>
+                  <div>new|Registered</div>
+                </td>
+                <td><img src="" alt="flag" class="tableimg"></td>
+                <td>
+                  <div style="display: flex; justify-content: space-between;">
+                    <div><b>50%</b></div>
+                    <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+                   
+                  </div> 
+                  <progressbar class="progressbar" [value]="50"></progressbar>
+             
+                </td>
+                <td><img src="" alt="pay img" class="tableimg"></td>
+                <td>
+                  <div>Last login</div>
+                  <div><b>10 Sec ago</b></div>
+                </td>
+              </tr>
+              <tr>
+                <td><img src="" alt="profile" class="tableimg"></td>
+                <td><div>Username</div>
+                  <div>new|Registered</div>
+                </td>
+                <td><img src="" alt="flag" class="tableimg"></td>
+                <td>
+                  <div style="display: flex; justify-content: space-between;">
+                    <div><b>50%</b></div>
+                    <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+                   
+                  </div>  
+                  <progressbar class="progressbar" [value]="50"></progressbar>
+             
+                </td>
+                <td><img src="" alt="pay img" class="tableimg"></td>
+                <td>
+                  <div>Last login</div>
+                  <div><b>10 Sec ago</b></div>
+                </td>
+              </tr>
+              <tr>
+                <td><img src="" alt="profile" class="tableimg"></td>
+                <td><div>Username</div>
+                  <div>new|Registered</div>
+                </td>
+                <td><img src="" alt="flag" class="tableimg"></td>
+                <td>
+                  <div style="display: flex; justify-content: space-between;">
+                    <div><b>50%</b></div>
+                    <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+                    
+                  </div>  
+                  <progressbar class="progressbar" [value]="50"></progressbar>
+             
+                </td>
+                <td><img src="" alt="pay img" class="tableimg"></td>
+                <td>
+                  <div>Last login</div>
+                  <div><b>10 Sec ago</b></div>
+                </td>
+              </tr>
+              <tr>
+                <td><img src="" alt="profile" class="tableimg"></td>
+                <td><div>Username</div>
+                  <div>new|Registered</div>
+                </td>
+                <td><img src="" alt="flag" class="tableimg"></td>
+                <td>
+                  <div style="display: flex; justify-content: space-between;">
+                    <div><b>50%</b></div>
+                    <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+                  </div>
+                  <progressbar class="progressbar" [value]="50"></progressbar>
+                 </td>
+                <td><img src="" alt="pay img" class="tableimg"></td>
+                <td>
+                  <div>Last login</div>
+                  <div><b>10 Sec ago</b></div>
+                </td>
+              </tr>
+             
+            </tbody>
+          </table>
+        </div>
+    
 </div>
 
 
