--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -57,8 +57,8 @@
 
   /* @media (min-width: 0px) and (max-width: 576px)  {
      
-} */
-@media (min-width: 0px) and (max-width: 768px)  {
+} */@media (min-width: 0px) and (max-width: 768px)  {
+
   .displayonlg
   {
       display: none;
