--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -2,3 +2,17 @@
 {
     height:8px;
 }
+.graphtoprightbtn
+{
+    color: #c8ced3;
+    border-color: #c8ced3;
+    border-radius: 5px;
+}
+@media (min-width: 0px) and (max-width: 767px)  {
+.display-lg
+{
+    display: none;
+   
+}
+}
+
