--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,17 +1,96 @@
 
 
 <app-chartcomponent></app-chartcomponent>
+<div class="container">
+  <div class="card" style="margin-bottom:20px;">
+    <div class="card-body">
+      <div style="display:flex; justify-content: space-between;">
+           <div>
+             <b>Traffic</b> 
+             <br>
+             <small>November 2017</small>
+           </div>
+           <div class="display-lg">
+             <button class="graphtoprightbtn">
+               Day
+             </button>
+             <button  class="graphtoprightbtn">
+              Month
+            </button>
+            <button  class="graphtoprightbtn">
+              Year
+            </button>
+            <button style="margin-left: 10px;">
+              Button with icon
+            </button>
+           </div>
+      </div>
+      <div>
+        <canvas baseChart height="300" width="300"
+            [datasets]="lineChartData"
+            [labels]="lineChartLabels"
+            [options]="lineChartOptions"
+            [colors]="lineChartColors"
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"
+            [plugins]="lineChartPlugins">
+          </canvas>
+      </div>
+      
+    </div>
+    <div class="card-footer">
+     <div class="row text-center">
+       <div class="col-xs-12 col-md mb-xs-2 mb-0">
+         <div>Vists</div>
+         <strong>29.703 Users (20%)</strong>
+        <div class="mb-2">
+      <progressbar [value]="55" style="height: 8px;"></progressbar>
+    </div>
+       </div>
+       <div class="col-xs-12 col-md mb-xs-2 mb-0">
+        <div>Vists</div>
+        <strong>29.703 Users (20%)</strong>
+        <div class="mb-2">
+          <progressbar [value]="55" style="height: 8px;"></progressbar>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md mb-xs-2 mb-0">
+        <div>Vists</div>
+         <strong>29.703 Users (20%)</strong>
+         <div class="mb-2">
+          <progressbar [value]="55" style="height: 8px;"></progressbar>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md mb-xs-2 mb-0">
+        <div>Vists</div>
+        <strong>29.703 Users (20%)</strong>
+        <div class="mb-2">
+          <progressbar [value]="55" style="height: 8px;"></progressbar>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md mb-xs-2 mb-0">
+        <div>Vists</div>
+        <strong>29.703 Users (20%)</strong>
+        <div class="mb-2">
+          <progressbar [value]="55" style="height: 8px;"></progressbar>
+        </div>
+      </div>
+
+     </div>
+    </div>
+  </div>
+</div>
+
 <app-brandcard></app-brandcard>
-<div style="width:100%; height:400px; overflow: auto; display: flex; justify-content: center;">
+<div style="width:100%; height:400px; overflow: auto;">
     <!-- <div style="width:30px; height:30px; overflow:auto;">
         vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
         </div> -->
-        <div>
-          <table class="table table-hover" style="width:1050px; background-color: white; border: 1px soild #E4E7EA;">
+        
+          <table class="table table-hover" style="width: 1200px;background-color: white; border: 1px soild #E4E7EA;">
             <thead style="background-color: #E4E7EA;">
               <tr>
-                <th scope="col"><i class="fa fa-user fa-2x ml-2" aria-hidden="true"></i>
-                </th>
+                <th scope="col">Icon</th>
                 <th scope="col">User</th>
                 <th scope="col">Country</th>
                 <th scope="col">Usage</th>
@@ -21,11 +100,11 @@
             </thead>
             <tbody>
               <tr>
-                <td><img src="../../assets/profile.png" alt="profile" style="height: 40px;width: 40px;" class="tableimg img-fluid"></td>
+                <td><img src="" alt="profile" class="tableimg"></td>
                 <td><div>Username</div>
                   <div>new|Registered</div>
                 </td>
-                <td><img src="../../assets/flag.png" style="height: 20px;width: 35px;" alt="flag" class="tableimg mt-2"></td>
+                <td><img src="" alt="flag" class="tableimg"></td>
                 <td>
                   <div style="display: flex; justify-content: space-between;">
                     <div><b>50%</b></div>
@@ -35,19 +114,18 @@
                   <progressbar class="progressbar" [value]="50"></progressbar>
              
                 </td>
-                <td><i class="fa fa-cc-stripe fa-2x ml-3" aria-hidden="true"></i>
-                </td>
+                <td><img src="" alt="pay img" class="tableimg"></td>
                 <td>
                   <div>Last login</div>
                   <div><b>10 Sec ago</b></div>
                 </td>
               </tr>
               <tr>
-                <td><img src="../../assets/profile.png" alt="profile" style="height: 40px;width: 40px;" class="tableimg img-fluid"></td>
+                <td><img src="" alt="profile" class="tableimg"></td>
                 <td><div>Username</div>
                   <div>new|Registered</div>
                 </td>
-                <td><img src="../../assets/flag.png" style="height: 20px;width: 35px;" alt="flag" class="tableimg mt-2"></td>
+                <td><img src="" alt="flag" class="tableimg"></td>
                 <td>
                   <div style="display: flex; justify-content: space-between;">
                     <div><b>50%</b></div>
@@ -57,19 +135,18 @@
                   <progressbar class="progressbar" [value]="50"></progressbar>
              
                 </td>
-                <td><i class="fa fa-paypal fa-2x ml-3" aria-hidden="true"></i>
-                </td>
+                <td><img src="" alt="pay img" class="tableimg"></td>
                 <td>
                   <div>Last login</div>
                   <div><b>10 Sec ago</b></div>
                 </td>
               </tr>
               <tr>
-                <td><img src="../../assets/profile.png" alt="profile" style="height: 40px;width: 40px;" class="tableimg img-fluid"></td>
+                <td><img src="" alt="profile" class="tableimg"></td>
                 <td><div>Username</div>
                   <div>new|Registered</div>
                 </td>
-                <td><img src="../../assets/flag.png" style="height: 20px;width: 35px;" alt="flag" class="tableimg mt-2"></td>
+                <td><img src="" alt="flag" class="tableimg"></td>
                 <td>
                   <div style="display: flex; justify-content: space-between;">
                     <div><b>50%</b></div>
@@ -79,19 +156,18 @@
                   <progressbar class="progressbar" [value]="50"></progressbar>
              
                 </td>
-                <td><i class="fa fa-cc-visa fa-2x ml-3" aria-hidden="true"></i>
-                </td>
+                <td><img src="" alt="pay img" class="tableimg"></td>
                 <td>
                   <div>Last login</div>
                   <div><b>10 Sec ago</b></div>
                 </td>
               </tr>
               <tr>
-                <td><img src="../../assets/profile.png" alt="profile" style="height: 40px;width: 40px;" class="tableimg img-fluid"></td>
+                <td><img src="" alt="profile" class="tableimg"></td>
                 <td><div>Username</div>
                   <div>new|Registered</div>
                 </td>
-                <td><img src="../../assets/flag.png" style="height: 20px;width: 35px;" alt="flag" class="tableimg mt-2"></td>
+                <td><img src="" alt="flag" class="tableimg"></td>
                 <td>
                   <div style="display: flex; justify-content: space-between;">
                     <div><b>50%</b></div>
@@ -99,8 +175,7 @@
                   </div>
                   <progressbar class="progressbar" [value]="50"></progressbar>
                  </td>
-                <td><i class="fa fa-cc-mastercard fa-2x ml-3" aria-hidden="true"></i>
-                </td>
+                <td><img src="" alt="pay img" class="tableimg"></td>
                 <td>
                   <div>Last login</div>
                   <div><b>10 Sec ago</b></div>
@@ -109,7 +184,6 @@
              
             </tbody>
           </table>
-        </div>
     
 </div>
 
